# Cheetah3-Impedance-Control

./: .gitignore  ReadMe.md
Impedance-Control-ADL/: README.md
Impedance-Control-ADL/test/linux/simple_test/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.md  cmake_install.cmake  config.h  rt_ethercat.c  rt_ethercat.h  rt_gpio.c  rt_gpio.h  rt_logger.c  rt_logger.h  rt_tiboard_data.h  simple_test.c
Impedance-Control-ADL/test/linux/simple_test/lcm-types/: ecat_adl_status_t.c  ecat_adl_status_t.h  ecat_command_t.c  ecat_command_t.h  ecat_data_t.c  ecat_data_t.h  ecat_hard_enable_t.c  ecat_hard_enable_t.h  ecat_hard_enable_t.lcm
Impedance-Control-GUI/: ReadMe.md
Impedance-Control-GUI/LegControl/: LegControl.pro  controlgui.cpp  controlgui.h  controlgui.ui  main.cpp
Impedance-Control-GUI/LegControl/lcm-types/: ecat_adl_status_t.hpp  ecat_adl_status_t.lcm  ecat_hard_enable_t.hpp  ecat_hard_enable_t.lcm
Impedance-Control-GUI/scripts/: config_network_ADL.sh  config_network_lcm.sh
